--- a/src/app/pages/layout/layout.component.css
+++ b/src/app/pages/layout/layout.component.css
@@ -5,8 +5,7 @@
   min-height: 100vh;
   width: 100%;
   position: relative;
-  margin: 0;
-  padding: 0;
+
   overflow: hidden;
 }
 
@@ -50,18 +49,18 @@
    BARRA SUPERIOR OSCURA
    ============================================ */
 .top-toolbar {
-  background-color: #3a3a3a !important;
+  background-color: #ff0000 !important;
   color: #ffffff;
-  height: 30px;
-  min-height: 30px;
+  height: 0;
+  min-height: 0;
   padding: 0;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   transition: height 0.3s ease-in-out;
 }
 
 .toolbar-scrolled .top-toolbar {
-  height: 25px;
-  min-height: 25px;
+  height: 0px;
+  min-height: 0px;
 }
 
 .top-toolbar-spacer {
@@ -463,8 +462,8 @@
   }
 
   .top-toolbar {
-    height: 25px;
-    min-height: 25px;
+    height: 0px;
+    min-height: 0px;
   }
 
   .nav-toolbar {
