--- a/src/app/pages/publicaciones/publicaciones.component.html
+++ b/src/app/pages/publicaciones/publicaciones.component.html
@@ -33,7 +33,7 @@
               <mat-icon class="autor-icon">person</mat-icon>
               <span>{{ publicacion.autor }}</span>
             </div>
-            <button mat-raised-button color="primary" class="leer-mas-btn">
+            <button mat-raised-button color="primary" class="leer-mas-btn" (click)="abrirPublicacion(publicacion)">
               <mat-icon>arrow_forward</mat-icon>
               Leer más
             </button>
