--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -166,11 +166,11 @@
         </ng-template>
       </mat-tab>
 
-      <mat-tab label="Usuarios">
+    <!-- 1--  <mat-tab label="Usuarios">
         <ng-template matTabContent>
           <app-admin-cursos></app-admin-cursos>
         </ng-template>
-      </mat-tab>
+      </mat-tab> -->
     </mat-tab-group>
   </div>
 
