--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -42,7 +42,7 @@
         <mat-toolbar class="nav-toolbar">
           <div class="nav-toolbar-left">
             <img src="assets/img/coed.png" alt="Logo" class="nav-icon" >
-            <span class="nav-title"> Municipalidad Distrital de  <span class="nav-title-small">San Juan de Lurigancho, Portal de la Información</span></span>
+            <span class="nav-title"> Municipalidad Distrital de  <span class="nav-title-small">San Juan de Lurigancho</span></span>
           </div>
           <div class="nav-toolbar-right">
             <!-- Botón hamburguesa solo en móvil -->
@@ -78,7 +78,7 @@
       <mat-toolbar class="nav-toolbar">
         <div class="nav-toolbar-left">
           <img src="assets/img/coed.png" alt="Logo" class="nav-icon">
-          <span class="nav-title"> Municipalidad Distrital de San Juan de Lurigancho, Portal de la Información</span>
+          <span class="nav-title"> Municipalidad Distrital de San Juan de Lurigancho</span>
         </div>
         <div class="nav-toolbar-right">
           <button *ngFor="let menuItem of menuItems"
