--- a/src/app/pages/prueba-geojson/prueba-geojson.component.html
+++ b/src/app/pages/prueba-geojson/prueba-geojson.component.html
@@ -138,7 +138,7 @@
           <button mat-icon-button (click)="irAMiUbicacion()"
           matTooltip="Mi ubicación"
           class="menu-toggle-btn location-btn">
-            <mat-icon>location_on</mat-icon>
+            <div class="blue-dot-icon"></div>
           </button>
 
           <!-- Botón de leyenda -->
